<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4020.12">
  <DUT Name="DAD_ControlFieldRecieve" Id="{c54d7db2-78c1-471e-af4a-54914a4c5a5c}">
    <Declaration><![CDATA[///DAD Driver control field recieve
TYPE DAD_ControlFieldRecieve :
STRUCT
    TxBufferFull : BIT; //Toggles when Slave has made available new Input Area data
    RxBufferEmpty : BIT; //toggles when Output Area data has been read by Slave
    ResyncAcknowledge : BIT; //Set to 1 as an acknowledge to a resync request. With this bit, the master can detect a slave is on line.
    MoreBit : BIT; //is 1 when this is not the last piece of a fragmentation sequence while it is 0 when this is the last piece
    DAD_Fixed1 : BIT := FALSE; //Set to 0 when DAD messaging protocol is used
    DAD_Fixed2 : BIT := FALSE; //Set to 0 when DAD messaging protocol is used
    DAD_Fixed3 : BIT := FALSE; //Set to 0 when DAD messaging protocol is used
    DAD_Fixed4 : BIT := TRUE;  //Set to 1 when DAD messaging protocol is used  
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>